<resources>
    <string name="app_name">Wtec Suprimentos</string>
    <string name="greeting">Olá!</string>
    <string name="home_txt1">Seja bem vindo(a) ao aplicativo simulador Wtec Suprimentos!</string>
    <string name="home_txt2">A partir da próxima tela você poderá fazer uma simulação como um cliente da Wtec solicitando crédito, ou um analista da Wtec que vai categorizar um novo cliente.</string>
    <string name="bt_choose1">Simular solicitação de crédito\n(Regressão)</string>
    <string name="bt_choose2">Simular categorização de um novo cliente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_expl">Os Clientes na Wtec são classificados em 4 clusters:</string>
    <string name="cat_1">Os Clientes deste cluster tem como características pricipais:\n\n\t* São clientes de grande porte.\n\t* Faturamento médio em torno de 69MM.
        \n\t* Têm risco muito baixo. \n\t* Tempo de fundação médio em torno de 21 anos.\n\t* Valor de crédito concedito
    varia de 100 a 600MM.</string>
    <string name="cat_2">Os Clientes deste cluster tem como características pricipais:\n\n\t* São clientes de médio porte.\n\t* Faturamento médio em torno de 16MM.
        \n\t* 87% destes clientes têm risco médio, ao passo que 13% apresentam risco alto.\n\t* 87% concedem aprovação de crédito. \n\t* 62% da base configura-se como Microempresa.
        \n\t* Tempo de fundação médio em torno de 10 anos.\n\t* Valor de crédito concedito
    varia de 100 a 600MM.</string>
    <string name="cat_3">Os Clientes deste cluster tem como características pricipais:\n\n\t* São clientes de grande porte.
        \n\t* Faturamento médio em torno de 39MM.
        \n\t* Têm risco baixo.
        \n\t* Média de atraso no pagamento em torno de 22 idas (sendo máximo em 55 dias).
        \n\t* Tempo de fundação médio em torno de 17 anos.
        \n\t* Microempresas.
        \n\t* 96% concedem aprovação.</string>
    <string name="cat_4">Os Clientes deste cluster tem como características pricipais:
        \n\n\t* São clientes de grande porte.\n\t* Faturamento médio em torno de 3bi.
        \n\t* Têm risco de médio a muito baixo.
        \n\t* Média de atraso no pagamento em torno de 22 idas (sendo máximo em 55 dias).
        \n\t* Tempo de fundação médio em torno de 25 anos.
        \n\t* Solidez no mercado.
        \n\t* 96% concedem aprovação.</string>
    <string name="cadastrar_novo_cliente">Cadastrar Novo Cliente</string>
    <string name="listar_clientes_classificados">Listar Clientes Classificados</string>
    <string name="listar_clientes_para_classificar">Listar Clientes Para Classificar</string>
    <string name="classify_customers">Classify Customers</string>
    <string name="nome_hint">Nome</string>
    <string name="nome">Nome</string>
    <string name="maior_atraso">Maior atraso</string>
    <string name="titulos_em_aberto">Títulos em aberto</string>
    <string name="faturamento_bruto">Faturamento bruto</string>
    <string name="margem_bruta">Margem bruta</string>
    <string name="periodo_demonstrativo_em_meses">Período demonstrativo em meses</string>
    <string name="custos">Custos</string>
    <string name="ano_fundacao">Ano de fundação</string>
    <string name="capital_social">Capital social</string>
    <string name="score_pontualidade">Score pontualidade</string>
    <string name="margem_bruta_acumulada">Margem bruta acumulada %</string>
    <string name="prazo_medio_recebimento_vendas">Prazo médio recebimento vendas</string>
    <string name="diferenca_percentual_risco">Diferença percentual de risco</string>
    <string name="percentual_risco">Percentual de risco</string>
    <string name="limite_empresa_analise_de_credito">Limite empresa de análise de crédito</string>
    <string name="risco_alto">Risco Alto</string>
    <string name="risco_medio">Risco médio</string>
    <string name="risco_baixo">Risco baixo</string>
    <string name="risco_muito_baixo">Risco muito baixo</string>
    <string name="risco">Risco</string>
    <string name="empresa_me">É microempresa?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="tem_restricao">Tem restrição?</string>
    <string name="cadastrar_e_classificar">Cadastrar e classificar</string>
    <string name="erro_nome">O nome deve ter ao menos 3 letras</string>
    <string name="erro_maior_atraso">O campo Maior atraso deve ter ao menos um número</string>
    <string name="erro_titulos_em_aberto">O campo títulos em aberto deve ter ao menos um número</string>
    <string name="erro_faturamento_bruto">O campo faturamento bruto deve ter ao menos 1 número</string>
    <string name="erro_margem_bruta">O campo margem bruta deve ter ao menos um número</string>
    <string name="erro_periodo_demonstrativo_em_meses">O campo período demonstrativo em meses deve ter ao menos um número</string>
    <string name="erro_custos">O campo custos deve ter ao menos um número</string>
    <string name="erro_ano_fundacao">O campo ano de fundação deve ter 4 números</string>
    <string name="erro_capital_social">O campo capital social deve ter ao menos 1 número</string>
    <string name="erro_score_pontualidade">O campo score pontualidade deve ter ao menos um número</string>
    <string name="erro_limite_empresa_analise_credito">O campo limite empresa análise de crédito deve ter ao menos um número</string>
    <string name="erro_prazo_medio_recebimento_vendas">O campo prazo médio de recebimento de vendas deve ter ao menos um número</string>
    <string name="erro_margem_bruta_acumulada">O campo margem bruta acumulada deve ter duas casas decimais</string>
    <string name="erro_diferenca_percentual_risco">O campo diferença percentual de risco deve ter duas casas decimais</string>
    <string name="erro_percentual_risco">O campo percentual risco deve ter duas casas decimais</string>
    <string name="erro_validacao">Ainda existem campos para preencher</string>
    <string name="cluster">Cluster</string>
    <string name="cluster_message">"Este cliente pertence ao Cluster: "</string>
    <string name="regress_expl">O modelo de regressão utiliza modelos de machine learning para analisar as requisições de crédito dos clientes da WTEC</string>
    <string name="regress_1">Basta entrar com as informações do cliente já cadastrado e solicitar o crédito.</string>
    <string name="solicitar_credito">Solicitar crédito</string>
    <string name="listar_clientes_para_regressaor">Listar clientes para solicitar crédito</string>
    <string name="titulos_valor">Valor solicitado</string>
    <string name="erro_valor">O campo valor deve ter ao menos um número</string>
    <string name="solicitacao_credito">Solicitação de Crédito</string>
    <string name="classificacao_novo_cliente">Classificação de Novo Cliente</string>

</resources>