<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ClassifyCustomerFragment">

    <LinearLayout
        android:id="@+id/ll_progressBar_classify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="#000000"
        android:alpha="0.6"
        android:gravity="center"
        android:visibility="invisible">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nome_hint"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextMaiorAtraso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/maior_atraso"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextTitulosEmAberto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/titulos_em_aberto"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextFaturamentoBruto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/faturamento_bruto"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextMargemBruta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/margem_bruta"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextPeriodoDemonstrativoEmMeses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/periodo_demonstrativo_em_meses"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextCustos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/custos"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextAnoFundacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/ano_fundacao"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextCapitalSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/capital_social"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextNumberScorePontualidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/score_pontualidade"
                android:importantForAutofill="no"
                android:inputType="number"/>

            <EditText
                android:id="@+id/editTextPrazoMedioRecebimentoVendas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prazo_medio_recebimento_vendas"
                android:importantForAutofill="no"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextLimiteEmpresaAnaliseCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/limite_empresa_analise_de_credito"
                android:importantForAutofill="no"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/margem_bruta_acumulada" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/editTextMargemBrutaAcumulada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                app:mask="0.##%"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/diferenca_percentual_risco" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/editTextDiferencaPercentualRisco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                app:mask="0.##%"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/percentual_risco" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/editTextPercentualRisco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                app:mask="0.##%"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/risco" />

            <RadioGroup
                android:id="@+id/radioGroupRisco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/radioButtonAltoRisco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risco_alto" />

                <RadioButton
                    android:id="@+id/radioButtonMedioRisco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risco_medio" />

                <RadioButton
                    android:id="@+id/radioButtonBaixoRisco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risco_baixo" />

                <RadioButton
                    android:id="@+id/radioButtonMuitoBaixoRisco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/risco_muito_baixo" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/empresa_me" />

            <RadioGroup
                android:id="@+id/radioGroupEmpresaME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/radioButtonEmpresaMESim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sim" />

                <RadioButton
                    android:id="@+id/radioButtonEmpresaMENao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nao" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/tem_restricao" />

            <RadioGroup
                android:id="@+id/radioGroupRestricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/radioButtonRestricaoSim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sim" />

                <RadioButton
                    android:id="@+id/radioButtonRestricaoNao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/nao" />
            </RadioGroup>

            <Button
                android:id="@+id/bt_classify_customers"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:text="@string/cadastrar_e_classificar" />

        </LinearLayout>
    </ScrollView>



</FrameLayout>