<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".view.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/home_bg"
        android:elevation="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_home_ola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/greeting" />

        <TextView
            android:id="@+id/tv_home_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:justificationMode="inter_word"
            android:text="@string/home_txt1" />

        <TextView
            android:id="@+id/tv_home_txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:justificationMode="inter_word"
            android:text="@string/home_txt2" />

        <Button
            android:id="@+id/bt_home"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="Entendi!" />

    </LinearLayout>
</FrameLayout>